overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     background: #fff;
 	font-size: 20px;
 	color: #0f0f0f;
+	overflow-x: hidden;
 }
 
 /****Utilitis****/
